Agregado de boostrap

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="./css/estilo.css">-->
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -40,17 +41,18 @@
 
 
 
-    <H1 class="titulo-centro">Titulo Principal</H1>
-    <p class="tipografiaRoboto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, inventore
-        beatae neque tempore modi sit iure rerum atque molestias in dolorem recusandae consequatur
-        epudiandae accusamus, odio sapiente exercitationem ut maxime.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores consequatur necessitatibus, harum voluptatem
-        mollitia ipsa voluptates consequuntur ut ipsum ratione exercitationem commodi saepe consectetur aliquid
-        suscipit, quis optio! Consectetur, voluptate.</p>
+    <H1 class="titulo-centro">DIMEX 3D</H1>
+    <p class="tipografiaRoboto">En DIMEX 3D hacemos realidad tus ideas a través de impresión 3D de alta calidad.
+        Diseñamos y fabricamos piezas personalizadas, prototipos y soluciones a medida, adaptándonos a cada necesidad.
+
+        Trabajamos con precisión, compromiso y atención al detalle para ofrecer productos resistentes, funcionales y con
+        excelente terminación.
+
+        Si lo imaginás, en DIMEX 3D lo hacemos posible.p>
 
     <main>
         <section>
-            <h2 class="titulo-centro">Titulo</h2>
+            <h2 class="titulo-centro">Trabajos Realizados</h2>
             <div class="foto_inicio">
                 <div class="img_inicio"> <img
                         src="./assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt=""></div>
