--- a/pages/Nuestrahistoria.html
+++ b/pages/Nuestrahistoria.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="../css/estilo.css">-->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body class="grisfondo">
@@ -38,8 +39,11 @@
     <h1 class="titulo-centro">Sobre Nosotros</h1>
 
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nihil tempora corporis neque officiis ipsum,
-        blanditiis praesentium illo magnam aliquid, eveniet molestias veritatis...
+        Somos un emprendimiento dedicado a brindar soluciones mediante impresión 3D,ayudando a optimizar procesos,
+        reducir costos y fabricar piezas a medida. <br>
+
+        Trabajamos con materiales técnicos y ofrecemos asesoramiento personalizado para garantizar que cada diseño
+        cumpla su función de manera eficiente.
     </p>
 
     <div class="contenedor-nosotros-grid">
@@ -47,22 +51,28 @@
         <div class="columna-item">
             <h2>Nuestra Misión</h2>
             <img src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt="Misión">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perferendis dicta animi expedita unde
-                cumque nesciunt.</p>
+            <p>Brindar soluciones eficientes mediante impresión 3D, ofreciendo piezas funcionales, prototipos y
+                productos personalizados con altos estándares de calidad, precisión y compromiso.
+                Nos enfocamos en entender la necesidad de cada cliente para transformar ideas en resultados concretos y
+                funcionales.</p>
         </div>
 
         <div class="columna-item">
             <h2>Nuestra Visión</h2>
             <img src="../assets/img/Opera Instantánea_2025-12-21_181411_www.instagram.com.png" alt="Visión">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perferendis dicta animi expedita unde
-                cumque nesciunt.</p>
+            <p>Convertirnos en un referente en soluciones de fabricación digital, destacándonos por la innovación, la
+                confiabilidad y la mejora continua.
+                Aspiramos a crecer junto a nuestros clientes, incorporando nuevas tecnologías y materiales para ampliar
+                las posibilidades de diseño y producción.</p>
         </div>
 
         <div class="columna-item">
             <h2>Nuestra Historia</h2>
             <img src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png" alt="Historia">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perferendis dicta animi expedita unde
-                cumque nesciunt.</p>
+            <p>Somos tres amigos apasionados por la tecnología que convertimos la impresión 3D en una herramienta para
+                crear soluciones reales.
+                Hoy trabajamos desarrollando piezas y prototipos con precisión, compromiso y enfoque en cada necesidad.
+            </p>
         </div>
 
     </div>
