Modificacion de Css completo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body class="grisfondo">
+<body>
 
 
     <header class="header-principal">
@@ -20,39 +20,42 @@
         <nav>
             <ul class="barra-flex">
                 <li>
-                    <a href="#">INICIO</a>
+                    <a href="#" class="botones">INICIO</a>
                 </li>
                 <li>
-                    <a href="./pages/contactanos.html">Contacto</a>
+                    <a href="./pages/contactanos.html" class="botones">Contacto</a>
                 </li>
                 <li>
-                    <a href="./Pages/Nuestrosservicios.html">Nuestros servicios</a>
+                    <a href="./Pages/Nuestrosservicios.html" class="botones">Nuestros servicios</a>
                 </li>
                 <li>
-                    <a href="./Pages/Cotiza3D.html">Cotiza Tu Pieza</a>
+                    <a href="./Pages/Cotiza3D.html" class="botones">Cotiza Tu Pieza</a>
                 </li>
                 <li>
-                    <a href="./Pages/Nuestrahistoria.html">Sobre Nosotros</a>
+                    <a href="./Pages/Nuestrahistoria.html" class="botones">Sobre Nosotros</a>
                 </li>
             </ul>
         </nav>
 
     </header>
 
+    <main class="contenido-centro">
 
+        <H1 class="titulo-centro">DIMEX 3D</H1>
+        <p>En DIMEX 3D hacemos realidad tus ideas a través de impresión 3D de alta calidad.
+            Diseñamos y fabricamos piezas personalizadas, prototipos y soluciones a medida, adaptándonos a cada
+            necesidad.
 
-    <H1 class="titulo-centro">DIMEX 3D</H1>
-    <p class="tipografiaRoboto">En DIMEX 3D hacemos realidad tus ideas a través de impresión 3D de alta calidad.
-        Diseñamos y fabricamos piezas personalizadas, prototipos y soluciones a medida, adaptándonos a cada necesidad.
+            Trabajamos con precisión, compromiso y atención al detalle para ofrecer productos resistentes, funcionales y
+            con
+            excelente terminación.
 
-        Trabajamos con precisión, compromiso y atención al detalle para ofrecer productos resistentes, funcionales y con
-        excelente terminación.
-
-        Si lo imaginás, en DIMEX 3D lo hacemos posible.p>
-
+            Si lo imaginás, en DIMEX 3D lo hacemos posible.
+        <p>
+    </main>
     <main>
         <section>
-            <h2 class="titulo-centro">Trabajos Realizados</h2>
+            <h2 class="subtitulo-centro">Trabajos Realizados</h2>
             <div class="foto_inicio">
                 <div class="img_inicio"> <img
                         src="./assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt=""></div>
