--- a/pages/Cotiza3D.html
+++ b/pages/Cotiza3D.html
@@ -20,19 +20,19 @@
         <nav>
             <ul class="barra-flex">
                 <li>
-                    <a href="../index.html">INICIO</a>
+                    <a href="../index.html" class="botones">INICIO</a>
                 </li>
                 <li>
-                    <a href="./contactanos.html">Contacto</a>
+                    <a href="./contactanos.html" class="botones">Contacto</a>
                 </li>
                 <li>
-                    <a href="./Nuestrosservicios.html">Nuestros servicios</a>
+                    <a href="./Nuestrosservicios.html" class="botones">Nuestros servicios</a>
                 </li>
                 <li>
-                    <a href="./Cotiza3D.html">Cotiza Tu Pieza</a>
+                    <a href="./Cotiza3D.html" class="botones">Cotiza Tu Pieza</a>
                 </li>
                 <li>
-                    <a href="./Nuestrahistoria.html">Sobre Nosotros</a>
+                    <a href="./Nuestrahistoria.html" class="botones">Sobre Nosotros</a>
                 </li>
             </ul>
         </nav>
@@ -42,7 +42,7 @@
         <section class="seccion-izquierda">
             <h1 class="titulo-cotiza">Cotiza tu pieza</h1>
             <div class="contenedor-imagen">
-                <img src="../assets/img/Doc1_page-0001.PNG" alt="Imagen Cotizacion">
+                <img src="../assets/img/Doc1_page-0001.PNG" alt="Imagen Cotizacion" class="img-foto">
             </div>
         </section>
 
