--- a/pages/Nuestrosservicios.html
+++ b/pages/Nuestrosservicios.html
@@ -11,69 +11,59 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
+<header class="header-principal">
+    <h1 class".logo">DIMEX 3D</h1>
+    <nav>
+        <ul class="barra-flex">
+            <li>
+                <a href="../index.html" class="botones">INICIO</a>
+            </li>
+            <li>
+                <a href="./contactanos.html" class="botones">Contacto</a>
+            </li>
+            <li>
+                <a href="./Nuestrosservicios.html" class="botones">Nuestros servicios</a>
+            </li>
+            <li>
+                <a href="./Cotiza3D.html" class="botones">Cotiza Tu Pieza</a>
+            </li>
+            <li>
+                <a href="./Nuestrahistoria.html" class="botones">Sobre Nosotros</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main>
 
-<body class="grisfondo">
-
-
-    <header class="header-principal">
-        <h1 class".logo">DIMEX 3D</h1>
-        <nav>
-            <ul class="barra-flex">
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./contactanos.html">Contacto</a>
-                </li>
-                <li>
-                    <a href="./Nuestrosservicios.html">Nuestros servicios</a>
-                </li>
-                <li>
-                    <a href="./Cotiza3D.html">Cotiza Tu Pieza</a>
-                </li>
-                <li>
-                    <a href="./Nuestrahistoria.html">Sobre Nosotros</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-
-        <h1 class="titulo-centro">Nuestros Servicios<h1>
-                <h2 class="titulo-centro">Hace click en la imagen para conocer mas</h2>
+    <h1 class="titulo-centro">Nuestros Servicios<h1>
+            <h2 class="subtitulo-centro">Hace click en la imagen para conocer mas</h2>
 
 
-                <main>
-                    <section>
-                        <div class="foto_inicio">
-                            <div class="img_inicio"> <img
-                                    src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png"
-                                    alt="">
-                            </div>
-                            <div class="img_inicio"><img
-                                    src="../assets/img/Opera Instantánea_2025-12-21_174026_www.instagram.com.png"
-                                    alt="">
-                            </div>
-                            <div class="img_inicio"><img
-                                    src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png"
-                                    alt="">
-                            </div>
-                            <div class="img_inicio"> <img
-                                    src="../assets/img/Opera Instantánea_2025-12-21_174113_www.instagram.com.png"
-                                    alt="">
-                            </div>
-                            <div class="img_inicio"><img
-                                    src="../assets/img/Opera Instantánea_2025-12-21_174134_www.instagram.com.png"
-                                    alt="">
-                            </div>
-                            <div class="img_inicio"><img
-                                    src="../assets/img/Opera Instantánea_2025-12-21_174148_www.instagram.com.png"
-                                    alt="">
-                            </div>
-
+            <main>
+                <section>
+                    <div class="foto_inicio">
+                        <div class="img_inicio"> <img
+                                src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt="">
                         </div>
-                    </section>
+                        <div class="img_inicio"><img
+                                src="../assets/img/Opera Instantánea_2025-12-21_174026_www.instagram.com.png" alt="">
+                        </div>
+                        <div class="img_inicio"><img
+                                src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png" alt="">
+                        </div>
+                        <div class="img_inicio"> <img
+                                src="../assets/img/Opera Instantánea_2025-12-21_174113_www.instagram.com.png" alt="">
+                        </div>
+                        <div class="img_inicio"><img
+                                src="../assets/img/Opera Instantánea_2025-12-21_174134_www.instagram.com.png" alt="">
+                        </div>
+                        <div class="img_inicio"><img
+                                src="../assets/img/Opera Instantánea_2025-12-21_174148_www.instagram.com.png" alt="">
+                        </div>
 
-</body>
+                    </div>
+                </section>
+
+                </body>
 
 </html>
