--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -17,19 +17,19 @@
         <nav>
             <ul class="barra-flex">
                 <li>
-                    <a href="../index.html">INICIO</a>
+                    <a href="../index.html" class="botones">INICIO</a>
                 </li>
                 <li>
-                    <a href="./contactanos.html">Contacto</a>
+                    <a href="./contactanos.html" class="botones">Contacto</a>
                 </li>
                 <li>
-                    <a href="./Nuestrosservicios.html">Nuestros servicios</a>
+                    <a href="./Nuestrosservicios.html" class="botones">Nuestros servicios</a>
                 </li>
                 <li>
-                    <a href="./Cotiza3D.html">Cotiza Tu Pieza</a>
+                    <a href="./Cotiza3D.html" class="botones">Cotiza Tu Pieza</a>
                 </li>
                 <li>
-                    <a href="./Nuestrahistoria.html">Sobre Nosotros</a>
+                    <a href="./Nuestrahistoria.html" class="botones">Sobre Nosotros</a>
                 </li>
             </ul>
         </nav>
@@ -39,32 +39,39 @@
 
         <div class="redes-grid">
             <div class="red-item">
-                <img src="../assets/img/ig.jfif" alt="Instagram" class="icono-red">
-                <a href="#" class="btn-violeta-contacto">Instagram</a>
+                <img src="../assets/img/instagram.svg" alt="Instagram" class="icono-red">
+                <a href="#" class="botones">Instagram</a>
             </div>
 
             <div class="red-item">
-                <img src="../assets/img/fc.jfif" alt="Facebook" class="icono-red">
-                <a href="#" class="btn-violeta-contacto">Facebook</a>
+                <img src="../assets/img/facebook.svg" alt="Facebook" class="icono-red">
+                <a href="#" class="botones">Facebook</a>
             </div>
 
             <div class="red-item">
-                <img src="../assets/img/ds.avif" alt="Discord" class="icono-red">
-                <a href="#" class="btn-violeta-contacto">Discord</a>
+                <img src="../assets/img/discord.svg" alt="Discord" class="icono-red">
+                <a href="#" class="botones">Discord</a>
             </div>
 
             <div class="red-item">
-                <img src="../assets/img/pngtree-whatsapp-icon-png-image_3584844.jpg" alt="WhatsApp" class="icono-red">
-                <a href="#" class="btn-violeta-contacto">WhatsApp</a>
+                <img src="../assets/img/whatsapp.svg" alt="WhatsApp" class="icono-red">
+                <a href="#" class="botones">WhatsApp</a>
             </div>
         </div>
 
         <div class="foto-contenedor">
             <img src="../assets/img/Opera Instantánea_2025-12-21_174148_www.instagram.com.png" alt="foto random"
                 class="img-foto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus recusandae quia rerum pariatur! Impedit
-                nostrum ipsam repudiandae! Incidunt ut beatae, corporis, cumque quia natus facere illum blanditiis eum,
-                accusamus a.</p>
+            <p> <strong>Atención al Cliente</strong> <br> <br><br>
+
+                En DIMEX 3D podés encontrarnos a través de nuestros diferentes canales de atención. Estamos disponibles
+                para asesorarte, responder tus consultas y acompañarte en cada etapa de tu proyecto. <br>
+
+                Nuestro horario de atención es de 9:00 am a 10:00 pm, brindándote soporte amplio y flexible para que
+                puedas comunicarte cuando lo necesites. <br> <br>
+
+                <strong>Estamos listos para ayudarte a hacer realidad tu idea.</strong>
+            </p>
         </div>
     </main>
 
