--- a/pages/Nuestrahistoria.html
+++ b/pages/Nuestrahistoria.html
@@ -11,31 +11,31 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body class="grisfondo">
 
 
-    <header class="header-principal">
-        <h1 class="logo">DIMEX 3D</h1>
-        <nav>
-            <ul class="barra-flex">
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./contactanos.html">Contacto</a>
-                </li>
-                <li>
-                    <a href="./Nuestrosservicios.html">Nuestros servicios</a>
-                </li>
-                <li>
-                    <a href="./Cotiza3D.html">Cotiza Tu Pieza</a>
-                </li>
-                <li>
-                    <a href="./Nuestrahistoria.html">Sobre Nosotros</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<header class="header-principal">
+    <h1 class="logo">DIMEX 3D</h1>
+    <nav>
+        <ul class="barra-flex">
+            <li>
+                <a href="../index.html" class="botones">INICIO</a>
+            </li>
+            <li>
+                <a href="./contactanos.html" class="botones">Contacto</a>
+            </li>
+            <li>
+                <a href="./Nuestrosservicios.html" class="botones">Nuestros servicios</a>
+            </li>
+            <li>
+                <a href="./Cotiza3D.html" class="botones">Cotiza Tu Pieza</a>
+            </li>
+            <li>
+                <a href="./Nuestrahistoria.html" class="botones">Sobre Nosotros</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<div class="contenido-centro">
     <h1 class="titulo-centro">Sobre Nosotros</h1>
 
     <p>
@@ -45,37 +45,37 @@
         Trabajamos con materiales técnicos y ofrecemos asesoramiento personalizado para garantizar que cada diseño
         cumpla su función de manera eficiente.
     </p>
+</div>
+<div class="contenedor-nosotros-grid">
 
-    <div class="contenedor-nosotros-grid">
-
-        <div class="columna-item">
-            <h2>Nuestra Misión</h2>
-            <img src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt="Misión">
-            <p>Brindar soluciones eficientes mediante impresión 3D, ofreciendo piezas funcionales, prototipos y
-                productos personalizados con altos estándares de calidad, precisión y compromiso.
-                Nos enfocamos en entender la necesidad de cada cliente para transformar ideas en resultados concretos y
-                funcionales.</p>
-        </div>
-
-        <div class="columna-item">
-            <h2>Nuestra Visión</h2>
-            <img src="../assets/img/Opera Instantánea_2025-12-21_181411_www.instagram.com.png" alt="Visión">
-            <p>Convertirnos en un referente en soluciones de fabricación digital, destacándonos por la innovación, la
-                confiabilidad y la mejora continua.
-                Aspiramos a crecer junto a nuestros clientes, incorporando nuevas tecnologías y materiales para ampliar
-                las posibilidades de diseño y producción.</p>
-        </div>
-
-        <div class="columna-item">
-            <h2>Nuestra Historia</h2>
-            <img src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png" alt="Historia">
-            <p>Somos tres amigos apasionados por la tecnología que convertimos la impresión 3D en una herramienta para
-                crear soluciones reales.
-                Hoy trabajamos desarrollando piezas y prototipos con precisión, compromiso y enfoque en cada necesidad.
-            </p>
-        </div>
-
+    <div class="columna-item">
+        <h2>Nuestra Misión</h2>
+        <img src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt="Misión">
+        <p>Brindar soluciones eficientes mediante impresión 3D, ofreciendo piezas funcionales, prototipos y
+            productos personalizados con altos estándares de calidad, precisión y compromiso.
+            Nos enfocamos en entender la necesidad de cada cliente para transformar ideas en resultados concretos y
+            funcionales.</p>
     </div>
+
+    <div class="columna-item">
+        <h2>Nuestra Visión</h2>
+        <img src="../assets/img/Opera Instantánea_2025-12-21_181411_www.instagram.com.png" alt="Visión">
+        <p>Convertirnos en un referente en soluciones de fabricación digital, destacándonos por la innovación, la
+            confiabilidad y la mejora continua.
+            Aspiramos a crecer junto a nuestros clientes, incorporando nuevas tecnologías y materiales para ampliar
+            las posibilidades de diseño y producción.</p>
+    </div>
+
+    <div class="columna-item">
+        <h2>Nuestra Historia</h2>
+        <img src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png" alt="Historia">
+        <p>Somos tres amigos apasionados por la tecnología que convertimos la impresión 3D en una herramienta para
+            crear soluciones reales.
+            Hoy trabajamos desarrollando piezas y prototipos con precisión, compromiso y enfoque en cada necesidad.
+        </p>
+    </div>
+
+</div>
 
 </body>
 
