--- a/pages/Nuestrahistoria.html
+++ b/pages/Nuestrahistoria.html
@@ -50,7 +50,7 @@
 
     <div class="columna-item">
         <h2>Nuestra Misión</h2>
-        <img src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt="Misión">
+        <img src="../assets/img/Lampara.jpeg" alt="Misión">
         <p>Brindar soluciones eficientes mediante impresión 3D, ofreciendo piezas funcionales, prototipos y
             productos personalizados con altos estándares de calidad, precisión y compromiso.
             Nos enfocamos en entender la necesidad de cada cliente para transformar ideas en resultados concretos y
@@ -59,7 +59,7 @@
 
     <div class="columna-item">
         <h2>Nuestra Visión</h2>
-        <img src="../assets/img/Opera Instantánea_2025-12-21_181411_www.instagram.com.png" alt="Visión">
+        <img src="../assets/img/Gato.jpeg" alt="Visión">
         <p>Convertirnos en un referente en soluciones de fabricación digital, destacándonos por la innovación, la
             confiabilidad y la mejora continua.
             Aspiramos a crecer junto a nuestros clientes, incorporando nuevas tecnologías y materiales para ampliar
@@ -68,7 +68,7 @@
 
     <div class="columna-item">
         <h2>Nuestra Historia</h2>
-        <img src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png" alt="Historia">
+        <img src="../assets/img/Repo.jpeg" alt="Historia">
         <p>Somos tres amigos apasionados por la tecnología que convertimos la impresión 3D en una herramienta para
             crear soluciones reales.
             Hoy trabajamos desarrollando piezas y prototipos con precisión, compromiso y enfoque en cada necesidad.
