--- a/pages/Nuestrosservicios.html
+++ b/pages/Nuestrosservicios.html
@@ -36,31 +36,50 @@
 <main>
 
     <h1 class="titulo-centro">Nuestros Servicios<h1>
-            <h2 class="subtitulo-centro">Hace click en la imagen para conocer mas</h2>
+
 
 
             <main>
                 <section>
                     <div class="foto_inicio">
-                        <div class="img_inicio"> <img
-                                src="../assets/img/Opera Instantánea_2025-12-21_174005_www.instagram.com.png" alt="">
+                        <div class="img-salto">
+                            <div class="img_inicio"> <img src="../assets/img/Entrenamiento.jpeg" alt=""></div>
+                            <div class="info-texto">
+                                <p>Diseñamos y fabricamos tus piezas a medida con impresión 3D.</p>
+                            </div>
                         </div>
-                        <div class="img_inicio"><img
-                                src="../assets/img/Opera Instantánea_2025-12-21_174026_www.instagram.com.png" alt="">
+                        <div class="img-salto">
+                            <div class="img_inicio"><img src="../assets/img/Flox.jpeg" alt=""></div>
+                            <div class="info-texto">
+                                <p>Desarrollamos prototipos funcionales para validar tus proyectos.</p>
+                            </div>
                         </div>
-                        <div class="img_inicio"><img
-                                src="../assets/img/Opera Instantánea_2025-12-21_174053_www.instagram.com.png" alt="">
+                        <div class="img-salto">
+                            <div class="img_inicio"><img src="../assets/img/Leon.jpeg" alt=""></div>
+                            <div class="info-texto">
+                                <p>Reemplazamos piezas difíciles de conseguir o discontinuadas.</p>
+                            </div>
                         </div>
-                        <div class="img_inicio"> <img
-                                src="../assets/img/Opera Instantánea_2025-12-21_174113_www.instagram.com.png" alt="">
+                        <div class="img-salto">
+                            <div class="img_inicio"> <img src="../assets/img/Sahumerio.jpeg" alt=""></div>
+                            <div class="info-texto">
+                                <p>Optimizamos diseños para mejorar resistencia y rendimiento.</p>
+                            </div>
                         </div>
-                        <div class="img_inicio"><img
-                                src="../assets/img/Opera Instantánea_2025-12-21_174134_www.instagram.com.png" alt="">
+                        <div class="img-salto">
+                            <div class="img_inicio"><img src="../assets/img/Pinche.jpeg" alt=""></div>
+                            <div class="info-texto">
+                                <p>Realizamos producciones en pequeñas y medianas series.</p>
+                            </div>
                         </div>
-                        <div class="img_inicio"><img
-                                src="../assets/img/Opera Instantánea_2025-12-21_174148_www.instagram.com.png" alt="">
+                        <div class="img-salto">
+                            <div class="img_inicio"><img src="../assets/img/Depa.jpeg" alt=""></div>
+                            <div class="info-texto">
+                                <p>Brindamos asesoramiento técnico para convertir tu idea en un producto real.</p>
+                            </div>
                         </div>
 
+                    </div>
                     </div>
                 </section>
 
