--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -59,8 +59,7 @@
     </div>
 
     <div class="foto-contenedor">
-        <img src="../assets/img/Opera Instantánea_2025-12-21_174148_www.instagram.com.png" alt="foto random"
-            class="img-foto">
+        <img src="../assets/img/Llavero.jpeg" alt="foto random" class="img-foto">
         <p> <strong>Atención al Cliente</strong> <br> <br><br>
 
             En DIMEX 3D podés encontrarnos a través de nuestros diferentes canales de atención. Estamos disponibles
