--- a/pages/Cotiza3D.html
+++ b/pages/Cotiza3D.html
@@ -73,6 +73,14 @@
 
     </form>
 </main>
+<footer class="footer-basico">
+    <div class="redes-simples">
+        <a href="https://instagram.com/dimex3d?igsh=M2kyeGhzN3RubTyj" target="_blank">Instagram</a>
+        <a href="https://wa.me/num" target="_blank">WhatsApp</a>
+    </div>
+    <p>DIMEX 3D - Calidad en cada impresión</p>
+    <p class="copyright">© 2026 Todos los derechos reservados</p>
+</footer>
 </body>
 
 </html>
