--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -39,7 +39,7 @@
     <div class="redes-grid">
         <div class="red-item">
             <img src="../assets/img/instagram.svg" alt="Instagram" class="icono-red">
-            <a href="#" class="botones">Instagram</a>
+            <a href="https://instagram.com/dimex3d?igsh=M2kyeGhzN3RubTyj" class="botones" target="_blank"> Instagram</a>
         </div>
 
         <div class="red-item">
@@ -72,7 +72,14 @@
         </p>
     </div>
 </main>
-
+<footer class="footer-basico">
+    <div class="redes-simples">
+        <a href="https://instagram.com/dimex3d?igsh=M2kyeGhzN3RubTyj" target="_blank">Instagram</a>
+        <a href="https://wa.me/num" target="_blank">WhatsApp</a>
+    </div>
+    <p>DIMEX 3D - Calidad en cada impresión</p>
+    <p class="copyright">© 2026 Todos los derechos reservados</p>
+</footer>
 
 
 </body>
